[CW28]
* SYNC Mobile SDK | SyncProxyTester: Add possibility to restore connection during autotest

[CW27]
* SYNC Mobile SDK: SDL should always do a notification of the mobile app about closed session
* SyncProxyTester: Log two request of UnsubscribeButton on mobile
* SyncProxyTester: Some RPC responses are not shown in the list view
* SyncProxyTester: Incorrect representation of the "key - value" pair in the RPC Request at the XML test
* SyncProxyTester: Crashes while executing cics_UpperBound_big.xml

[CW26]
* SYNC Mobile SDK | SyncProxyTester: RPC Request "UnregisterAppInterface" send error
* SYNC Mobile SDK | SyncProxyTester: Resumption: Heartbeat timeout after IgnitionOff on mobile
* SyncProxyTester: AppInterfaceUnregisteredReason is displayed as service message
* SyncProxyTester: SetGlobalProperties: if uncheck all checkboxes of KeyboardProperties structure, anyway request will be sent with parameter keypressMode
* SYNC Mobile SDK: ProtocolMessageProcessor still send media messages when service is stopped
* SyncProxyTester: Show request, add empty SoftButtons array in the request
+ SYNC Mobile SDK: SyncMsgVersion update
* SyncProxyTester: Incorrect parsing integer value in structure of request in .xml tests

[CW25]
* SYNC Mobile SDK: Object reference leaks when restart SYNC Mobile SDK

[CW24]
+ SyncProxyTester | SyncProxyAndroid SDK: Log messages formed in SDK
* SyncProxyTester: Restore connection during autotest
* SyncProxyTester: 2nd session is not registered if during BT scan both session already started

[CW23]
* SyncProxyAndroid SDK: Heartbeat timeout after EndService
* SyncProxyTester: Data in RegisterAppInterface request, which SPT sends, do not match to data in autotest

[CW21]
* SyncProxyTester | SyncProxyAndroid SDK: Restore Services in case of multi-session connection
+ SyncProxyTester | SyncProxyAndroid SDK: Hide SessionId inside mobile SyncSDK, AppId - is a key for the each application
+ SyncProxyAndroid SDK: start/stop service are sync now