@@ -298,4 +298,7 @@
     <string name="set_up_dialog_hash_id">Hash Id</string>
     <string name="set_up_dialog_fake_hash_id">123456789</string>
 
+    <string name="ok_string">OK</string>
+    <string name="cancel_string">Cancel</string>
+
 </resources>
