@@ -1,4 +1,5 @@
 [CW28]
+* SyncProxyTester: SDL returns "INVALID_DATA" on UpdateTurnList request with empty navigationText or turnIcon of element
 * SYNC Mobile SDK | SyncProxyTester: Add possibility to restore connection during autotest
 
 [CW27]
